<resources>
    <string name="app_name">移动观展通</string>
    <string name="phonenum">手机号：</string>
    <string name="password">密\u0020 \u0020 码：</string>
    <string name="yanzhengma">验证码：</string>
    <string name="logintext">登录</string>
    <string name="quedingtext">确定</string>
    <string name="nexttext">下一步</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="zhanshanghint">请选择展商</string>
    <string name="usernamehint">请输入手机号</string>
    <string name="passwordhint">请输入密码</string>
    <string name="pichint">请输入图片内容</string>
    <string name="yanzhengmahint">请输入验证码</string>
    <string name="registtext">注册</string>
    <string name="backtext">返回</string>
    <string name="finshtext">完成</string>
    <string name="getyanzhengma">获取验证码</string>
    <string name="yifasongtext">已发送验证码到</string>
    <string name="registertishitext">请拍名片，快速完成登记</string>
    <string name="nocardtext">无名片</string>
    <string name="newpass">新\u0020 密\u0020码：</string>
    <string name="querenpass">确认密码：</string>
    <string name="newpasshint">请输入新的登录密码</string>
    <string name="querenpasshint">请再次确认登录密码</string>
    <string name="mymessagetext">我的信息</string>
    <string name="myredpackagetext">我的红包</string>
    <string name="mynametext">姓\u0020 \u0020 名：</string>
    <string name="myphototext">头\u0020 \u0020 像：</string>
    <string name="mygsnametext">公司名称：</string>
    <string name="myjobtext">职\u0020 \u0020位：</string>
    <string name="myemailtext">邮\u0020 \u0020箱：</string>
    <string name="myphonenumtext">手机号码</string>
    <string name="myfenleitext">展品分类</string>
    <string name="mymuditext">参展目的</string>
    <string name="mypropertytext">业务性质</string>
    <string name="myareatext">所属地区</string>
    <string name="savetext">保存</string>
    <string name="myouttext">退出登录</string>
    <string name="lingqutext">领取</string>
    <string name="zhanweihaotext">\u0020展\u0020位\u0020号：</string>
    <string name="gspropertytext">公司性质：</string>
    <string name="gsareatext">公司地区：</string>
    <string name="gsprofiletext">公司介绍：</string>
    <string name="phonenumtext">客服电话：</string>
    <string name="exhibitstext">参展展品：</string>
    <string name="exhibitortext">展商人员：</string>
    <string name="barcodeScannerhint">请将条码置于扫描框内</string>
    <string name="toast_barcodeScanner_notSupport">抱歉，您的设备不支持此功能！</string>
    <string name="toast_cameraOpenFailed">打开摄像头失败，请确保其他程序没有占用您的摄像头！</string>
    <string name="scancodetishi">请把二维码放置扫描区，快速加关注</string>
    <string name="scanrecordingtext">历史记录</string>
    <string name="settingtiaojiantext">设置筛选条件</string>
    <string name="daochutext">导出</string>
    <string name="zhanpinnametext">展品名称：</string>
    <string name="zhanpintypetext">展品类型：</string>
    <string name="zhanpindescriptiontext">展品描述：</string>
    <string name="exporttext">请输入您的邮箱：</string>
    <string name="oktext">确认</string>
    <string name="menu_search">查找</string>
    <string name="choose_zhanpinfenlei">请选择您关注的展品分类</string>
    <string name="choose_purpose">请选择您的参展目的</string>
    <string name="choose_property">请选择您的业务性质</string>
    <string name="choose_area">请选择您所属地区</string>
    <string name="enternametext">请输入姓名</string>
    <string name="entergsnametext">请输入公司名称</string>
    <string name="enternumtext">请输入展位号</string>
    <string name="enterjobtext">请输入职位</string>
    <string name="enteremailtext">请输入邮箱</string>
    <string name="settingpasswordtext">请设置登录密码</string>
    <string name="btn_yanzhengnum_text">立即体验</string>
    <string name="btn_lingqu_text">领取</string>
    <string name="miaoshutext">您最想说的话</string>
    <string name="huanyizhangtext">换一张</string>
    <string name="calltext">呼叫现场人员</string>
    <string name="jieshaotext">请输入一百字以内的公司介绍</string>
    <string name="exhibitspersenttext">请输入一百字以内的产品介绍</string>
    <string name="addphototext">点击添加头像</string>
    <string name="exhibitsnametext">请输入展品名</string>
    <string name="exhibitsfenleitext">请选择展品分类</string>
    <string name="btn_update">修改</string>
    <string name="item01">查看所有</string>
    <string name="item02">只看我发的</string>
    <string name="nametext">姓\u0020 \u0020 \u0020 \u0020名</string>
    <string name="companytext">公\u0020 \u0020 \u0020 \u0020司</string>
    <string name="jobtext">职\u0020 \u0020 \u0020 \u0020位</string>
    <string name="emailtext">邮\u0020 \u0020 \u0020 \u0020箱</string>
    <string name="followclassificationtext">关注分类</string>
    <string name="purposetext">参展目的</string>
    <string name="propertytext">业务性质</string>
    <string name="areatext">所属地区</string>
    <string name="mycodetext">我的二维码,扫一扫加关注</string>
</resources>
