<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/addpeople_toolbar"
        layout="@layout/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/img_addphoto"
        android:layout_width="@dimen/imageview"
        android:layout_height="@dimen/imageview"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/myphoto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/addphototext" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/enternametext"
        android:background="@mipmap/bg_addpeople"/>

    <EditText
        android:id="@+id/edit_job"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/enterjobtext"
        android:background="@mipmap/bg_addpeople"/>

    <EditText
        android:id="@+id/edit_phonenum"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/usernamehint"
        android:background="@mipmap/bg_addpeople"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_button"
        android:gravity="center"
        android:text="@string/quedingtext"
        android:textColor="@color/white" />

</LinearLayout>
