<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/addexhibits_toolbar"
        layout="@layout/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/img_addphoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/myphoto" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/exhibitsnametext"
        android:background="@mipmap/bg_addpeople"/>

    <EditText
        android:id="@+id/edit_fenlei"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/exhibitsfenleitext"
        android:background="@mipmap/bg_addpeople"/>

    <EditText
        android:id="@+id/edit_persent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/exhibitspersenttext"
        android:background="@mipmap/bg_addpeople"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_button"
        android:gravity="center"
        android:text="@string/quedingtext"
        android:textColor="@color/white" />

</LinearLayout>
