<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_qiyephoto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/qiye"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mygsnametext" />

        <EditText
            android:id="@+id/tv_gsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:hint="@string/entergsnametext"
            android:padding="10dp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_gsname"
            android:layout_marginTop="10dp"
            android:background="@color/divideLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zhanweihaotext" />

        <EditText
            android:id="@+id/tv_zhanweihao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:hint="@string/enternumtext"
            android:padding="10dp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_zhanweihao"
            android:layout_marginTop="10dp"
            android:background="@color/divideLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/gsprofiletext" />

        <EditText
            android:id="@+id/tv_gsprofile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:hint="@string/jieshaotext"
            android:padding="10dp" />

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_gsprofile"
            android:layout_marginTop="10dp"
            android:background="@color/divideLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/phonenumtext" />

        <TextView
            android:id="@+id/tv_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:padding="10dp"
            android:text="New Text" />

        <View
            android:id="@+id/view9"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_phonenum"
            android:layout_marginTop="10dp"
            android:background="@color/divideLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exhibitstext" />

        <TextView
            android:id="@+id/tv_exhibits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView0"
            android:layout_toRightOf="@+id/textView0"
            android:padding="10dp"
            android:text="New Text" />

        <View
            android:id="@+id/view0"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_exhibits"
            android:layout_marginTop="10dp"
            android:background="@color/divideLine" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_choose_fenlei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_zhanpinfenlei" />
    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divideLine" />

    <TextView
        android:id="@+id/tv_choose_purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_purpose" />
    <View
        android:id="@+id/view13"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divideLine" />

    <TextView
        android:id="@+id/tv_choose_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_property" />
    <View
        android:id="@+id/view14"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divideLine" />

    <TextView
        android:id="@+id/tv_choose_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_area" />
    <View
        android:id="@+id/view15"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divideLine" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exhibitortext" />

        <RelativeLayout
            android:id="@+id/rv_renyuan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_photo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_photo1"
                android:layout_alignStart="@+id/img_photo1"
                android:layout_below="@+id/img_photo1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="New Text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/rv_renyuan1"
            android:layout_toRightOf="@+id/rv_renyuan1"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_photo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_photo2"
                android:layout_alignStart="@+id/img_photo2"
                android:layout_below="@+id/img_photo2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="New Text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_photo2"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_photo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_photo3"
                android:layout_alignStart="@+id/img_photo3"
                android:layout_below="@+id/img_photo3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="New Text" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_tiyan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_yanzhengnum_text"
        android:background="@mipmap/bg_button"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>

